# just-us

./: Cargo.toml  TODO.md  flake.nix  justfile  package.toml
.github/workflows/: ci.yaml  nix.yml
completions/: just.bash  just.elvish  just.fish  just.powershell  just.zsh
crates/generate-book/: Cargo.toml
crates/generate-man/: Cargo.toml
crates/just-us-agents/: Cargo.toml
crates/just-us-agents/src/: cache.rs  helpers.rs  main.rs  progress.rs  resources.rs
crates/just-us-agents/src/graphql/: mod.rs  schema.rs  types.rs
crates/just-us-agents/src/tools/: dump.rs  list_recipes.rs  list_variables.rs  mod.rs  run_recipe.rs  run_recipe_request.rs  show_recipe.rs
crates/just-us-mcps/: Cargo.toml
crates/just-us-mcps/src/: helpers.rs  main.rs
crates/just-us-mcps/src/graphql/: schema.rs
crates/just-us-mcps/src/tools/: list_recipes.rs  run_recipe.rs
docs/: migration-from-tap-dancer.md
src/: agents.rs  attribute.rs  command_ext.rs  compile_error.rs  compile_error_kind.rs  config.rs  error.rs  evaluator.rs  justfile.rs  keyword.rs  lib.rs  node.rs  output_format.rs  parser.rs  recipe.rs  search.rs  setting.rs  settings.rs  signal_handler.rs  tap_output.rs  tap_stream.rs  testing.rs
tests/: attributes.rs  choose.rs  command.rs  completions.rs  dotenv.rs  edit.rs  global.rs  init.rs  invocation_directory.rs  json.rs  lib.rs  search.rs  search_arguments.rs  shell.rs  tap.rs  test.rs  working_directory.rs
zz-tests_bats/: common.bash  justfile  mcp_common.bash  mcp_progress.bats  mcp_result_cache.bats  signal_propagation.bats  tap14_output.bats
(+19 files in other folders)
