[package]
name = "just-us-mcps"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "just-us-agents"
path = "src/main.rs"

[dependencies]
mcp-server = { git = "https://github.com/amarbel-llc/rust-lib-mcp", features = ["tools"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "io-util", "io-std"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"
clap = { version = "4", features = ["derive"] }
